RESOLVED FIXED132311
SelectorCodeGenerator::generateElementIsNthChild() leaks the parent register :nth-child() is non-filtering
https://bugs.webkit.org/show_bug.cgi?id=132311
Summary SelectorCodeGenerator::generateElementIsNthChild() leaks the parent register ...
Benjamin Poulain
Reported 2014-04-28 16:44:04 PDT
SelectorCodeGenerator::generateElementIsNthChild() leaks the parent register :nth-child() is non-filtering
Attachments
Patch (5.73 KB, patch)
2014-04-28 16:45 PDT, Benjamin Poulain
no flags
Patch (7.72 KB, patch)
2014-04-28 17:31 PDT, Benjamin Poulain
kling: review+
Benjamin Poulain
Comment 1 2014-04-28 16:45:39 PDT
Benjamin Poulain
Comment 2 2014-04-28 17:31:53 PDT
Benjamin Poulain
Comment 3 2014-04-28 19:30:05 PDT
Note You need to log in before you can comment on or make changes to this bug.